# compecon-notes

./: homework.html  index.html  outline.html  robots.txt  search.json  setup.html  sitemap.xml
extras/: hank.html  hpc.html
lectures/: 01-python.html  02-brock-mirman.html  03-rbc-jax.html  04-aiyagari.html  05-krusell-smith.html  06-public-finance.html  07-structural-estimation.html  08-hact.html  09-ssj.html  10-deep-learning.html
materials/env/: pyproject.toml
materials/extras/: HANK.html  LectureParallel.html
materials/lec01/: GuessAndVerify.html  Lecture1.html  Lecture1_Python.ipynb  Vec.html
materials/lec02/: 2period.html  Lecture2.html  Lecture2.ipynb
materials/lec03/: lecture3.ipynb
materials/lec04/: aiyagari_jax.html  aiyagari_jax.ipynb
materials/lec05/: KSMethod.html  KSMethod.ipynb
materials/lec07/: functions.py  main.py
materials/lec10/: DLMethods.ipynb  DLMethodsKS.ipynb
