[project]
name = "lectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "jax>=0.9.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "jupyter-matlab-proxy>=0.18.0",
    "matlab-kernel>=0.17.1",
    "matplotlib>=3.10.8",
    "mkernel>=0.2.0",
    "numba>=0.63.1",
    "optax>=0.2.4",
    "optimistix>=0.0.11",
    "quantecon>=0.10.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
